Release 1.2.0
+ Export module-info for Java 11+
+ Add new methods to retrieve handy maps from enum constant containers (getKeysRelationsMap, getEnumRelationsMap, getEnumKeysMap)